// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/updater GET / /available - invalid version number 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/updater GET / /available - new version available 1`] = `
Object {
  "available": true,
  "bucket": null,
  "entities": Object {},
  "filename": "carecru_setup_v2.0.0-0.exe",
  "key": "",
  "path": null,
  "secret": "",
}
`;

exports[`/api/updater GET / /available - new version not available 1`] = `
Object {
  "available": false,
  "entities": Object {},
  "url": "",
}
`;

exports[`/api/updater GET / /release - retrieve latest release info 1`] = `
Object {
  "bucket": null,
  "build": 0,
  "filename": null,
  "id": "126d3cb0-4468-4503-9254-77fb1e8df539",
  "key": "",
  "major": 2,
  "minor": 0,
  "patch": 0,
  "path": null,
  "secret": "",
  "url": "",
}
`;

exports[`/api/updater PUT / /bump - bump up the version number 1`] = `
Object {
  "bucket": null,
  "build": 1,
  "entities": Object {},
  "filename": null,
  "id": "126d3cb0-4468-4503-9254-77fb1e8df539",
  "key": "",
  "major": 2,
  "minor": 0,
  "patch": 1,
  "path": null,
  "secret": "",
  "url": "",
}
`;

exports[`/api/updater PUT / /unbump - bump down the version number 1`] = `
Object {
  "bucket": null,
  "build": -1,
  "entities": Object {},
  "filename": null,
  "id": "126d3cb0-4468-4503-9254-77fb1e8df539",
  "key": "",
  "major": 2,
  "minor": 0,
  "patch": -1,
  "path": null,
  "secret": "",
  "url": "",
}
`;
